fix dark mode and extend clickable area

--- a/components/DirectionToggle/DirectionToggle.module.css
+++ b/components/DirectionToggle/DirectionToggle.module.css
@@ -1,6 +1,6 @@
 .button {
   border: rem(1px) solid light-dark(var(--mantine-color-gray-2), var(--mantine-color-dark-6));
-  background-color: light-dark(var(--mantine-color-white), var(--mantine-color-dark-7));
+  background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-7));
   border-top: none;
   border-bottom: none;
   border-left: none;
@@ -11,5 +11,7 @@
 
 .button:hover {
   background-color: light-dark(var(--mantine-color-white), var(--mantine-color-dark-6));
-  border-color: light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-5));
+  background-color: light-dark(var(--mantine-color-gray-1), var(--mantine-color-dark-5));
+
+  /* border-color: light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-5)); */
 }
